--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer-core": "^4.0.2",
     "browser-saveas": "^1.0.0",
     "csso": "^1.3.11",
+    "email-scramble": "^1.0.1",
     "handlebars": "^2.0.0",
     "moment": "^2.8.4",
     "smooth-scroll": "git://github.com/cferdinandi/smooth-scroll",
