--- a/resume.template
+++ b/resume.template
@@ -86,9 +86,9 @@
               {{/if}}
               {{#if email}}
                 <li class="basics-item">
-                  <a href="mailto:{{email}}">
+                  <a href="mailto:{{scrambleEmail email}}" data-scrambled-mailto>
                     <span class="icon text-muted"><i aria-hidden="true" class="icon-lg icon-envelope"></i></span>
-                    <span class="info" itemprop="email">{{email}}</span>
+                    <span data-scrambled-email class="info" itemprop="email">{{scrambleEmail email}}</span>
                   </a>
                 </li>
               {{/if}}
@@ -599,6 +599,7 @@
     window.downloadName = (name ? name + '-' : '') + 'resume.html';
     {{> saveAs}}
     {{> smoothScroll}}
+    {{> emailScramble}}
     {{> script}}
   </script>
 </body>
