Fix missing name in comment

--- a/resume.template
+++ b/resume.template
@@ -1,5 +1,5 @@
 <!--
-  This awesome resume was created {{#if name}}by {{name}} {{/if}}with the JSON resume schema: https://jsonresume.org/
+  This awesome resume was created {{#if resume.basics.name}}by {{resume.basics.name}} {{/if}}with the JSON resume schema: https://jsonresume.org/
   It uses the Eloquent theme: https://github.com/ThibWeb/jsonresume-theme-eloquent
 -->
 <!doctype html>
