--- a/resume.template
+++ b/resume.template
@@ -66,7 +66,7 @@
                 <li class="basics-item">
                   <a href="tel:{{scramblePhone phone}}" data-scrambled-phone-link>
                     <span class="icon text-muted"><i aria-hidden="true" class="icon-lg icon-phone"></i></span>
-                    <span class="info" data-scrambled-phone-text>{{scrambleText phone}}</span>
+                    <span class="info" data-scrambled-phone-text>{{obfuscateText phone}}</span>
                   </a>
                 </li>
               {{/if}}
@@ -90,7 +90,7 @@
                 <li class="basics-item">
                   <a href="mailto:{{scrambleText email}}" data-scrambled-email-link>
                     <span class="icon text-muted"><i aria-hidden="true" class="icon-lg icon-envelope"></i></span>
-                    <span data-scrambled-email-text class="info">{{scrambleText email}}</span>
+                    <span data-scrambled-email-text class="info">{{obfuscateText email}}</span>
                   </a>
                 </li>
               {{/if}}
