Invert how anchor ids are created to preserve links when adding new items

--- a/resume.template
+++ b/resume.template
@@ -169,9 +169,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.work}}
-                  <li class="detail-item row" id="{{itemID 'experience' @index}}" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+                  <li class="detail-item row" id="{{itemID 'experience' @index ../resume.work.length}}" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
                     <div class="col-sm-9 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'experience' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'experience' @index ../resume.work.length}}">#</a>
                       <h4>
                         <strong>{{position}}</strong>
                         {{~#if company~}}
@@ -244,9 +244,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.volunteer}}
-                  <li class="detail-item row" id="{{itemID 'project' @index}}" itemprop="memberOf" itemscope itemtype="http://schema.org/Organization">
+                  <li class="detail-item row" id="{{itemID 'project' @index ../resume.volunteer.length}}" itemprop="memberOf" itemscope itemtype="http://schema.org/Organization">
                     <div class="col-sm-9 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'project' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'project' @index ../resume.volunteer.length}}">#</a>
                       <h4>
                         {{#if website}}
                           <a href="{{website}}"  target="_blank" itemprop="url"><strong itemprop="name">{{organization}}</strong></a>
@@ -318,9 +318,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.education}}
-                  <li class="detail-item row" id="{{itemID 'education' @index}}" itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
+                  <li class="detail-item row" id="{{itemID 'education' @index ../resume.education.length}}" itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
                     <div class="col-sm-9 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'education' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'education' @index ../resume.education.length}}">#</a>
                       <h4>
                         <strong>{{area}}</strong>
                         {{~#if studyType~}}
@@ -392,9 +392,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.skills}}
-                  <li class="detail-item row" id="{{itemID 'skill' @index}}">
+                  <li class="detail-item row" id="{{itemID 'skill' @index ../resume.skills.length}}">
                     <div class="col-xs-12 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'skill' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'skill' @index ../resume.skills.length}}">#</a>
                       <h4>{{name}} {{#if level}}<span class="text-muted">— <em>{{level}}</em></span>{{/if}}</h4>
 
                       {{#if keywords}}
@@ -420,9 +420,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.awards}}
-                  <li class="detail-item row" id="{{itemID 'award' @index}}">
+                  <li class="detail-item row" id="{{itemID 'award' @index ../resume.awards.length}}">
                     <div class="col-sm-9 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'award' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'award' @index ../resume.awards.length}}">#</a>
                       <h4 itemprop="award">
                         <strong>{{title}}</strong>
                         {{~#if awarder~}}
@@ -467,9 +467,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.publications}}
-                  <li class="detail-item row" id="{{itemID 'publication' @index}}" itemscope itemtype="http://schema.org/CreativeWork">
+                  <li class="detail-item row" id="{{itemID 'publication' @index ../resume.publications.length}}" itemscope itemtype="http://schema.org/CreativeWork">
                     <div class="col-sm-9 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'publication' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'publication' @index ../resume.publications.length}}">#</a>
                       <h4>
                         <strong>
                           {{#if website}}
@@ -518,9 +518,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.interests}}
-                  <li class="detail-item row" id="{{itemID 'interest' @index}}">
+                  <li class="detail-item row" id="{{itemID 'interest' @index ../resume.interests.length}}">
                     <div class="col-xs-12 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'interest' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'interest' @index ../resume.interests.length}}">#</a>
                       <h4>{{name}}</h4>
 
                       {{#if keywords}}
@@ -546,9 +546,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.languages}}
-                  <li class="detail-item row" id="{{itemID 'language' @index}}">
+                  <li class="detail-item row" id="{{itemID 'language' @index ../resume.languages.length}}">
                     <div class="col-xs-12 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'language' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'language' @index ../resume.languages.length}}">#</a>
                       <h4>
                         <strong>{{language}}</strong>
                         {{~#if fluency~}}
@@ -574,9 +574,9 @@
 
               <ul class="list-unstyled">
                 {{#each resume.references}}
-                  <li class="detail-item row" id="{{itemID 'reference' @index}}">
+                  <li class="detail-item row" id="{{itemID 'reference' @index ../resume.references.length}}">
                     <div class="col-xs-12 detail-item-content">
-                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'reference' @index}}">#</a>
+                      <a class="anchor-link item-anchor" data-scroll href="#{{itemID 'reference' @index ../resume.references.length}}">#</a>
                       <blockquote>
                         <p itemprop="description">{{nl2br reference}}</p>
                         <footer itemprop="knows" itemscope itemtype="http://schema.org/Person"><cite title="{{name}}" itemprop="description">{{name}}</cite></footer>
