--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "curriculum"
   ],
   "dependencies": {
-    "autoprefixer-core": "^5.0.0",
+    "autoprefixer": "^6.0.3",
     "browser-saveas": "^1.0.0",
     "csso": "^1.3.11",
     "email-scramble": "^2.0.0",
