--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "autoprefixer": "^6.0.3",
+    "babel": "^5.8.29",
     "browser-saveas": "^1.0.0",
     "csso": "^1.3.11",
     "email-scramble": "^2.0.0",
