--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,25 @@
 sudo: false
 language: node_js
+
 node_js:
-    # - "stable"
-    - "0.12"
-    # - 4.2
+  - '0.12'
 
 install:
-    - npm install
+  - npm install
 
 script:
-    - npm run test
+  - npm run test
 
 notifications:
-    email:
-        on_success: change
-        on_failure: always
+  email:
+    on_success: change
+    on_failure: always
+
+deploy:
+  provider: npm
+  email: thib@thib.me
+  api_key:
+    secure: mUCgO8MbYVaJmBw6ICRRI5p507RJLHImVARisDjmlBOGpczu1B+WjPRtBeCbTc3IUUJO79GW4Hv8/C7FTdZ1Sr4fGAniCY9mM0MnjWz1MuHfUJs4JklbP7cvEdGCGoTkAq+WajZHQXXSqxHMN1llbQrTa8E/96Pd+Shs55YKlhM=
+  on:
+    tags: true
+    repo: ThibWeb/jsonresume-theme-eloquent
