--- a/package.json
+++ b/package.json
@@ -25,27 +25,28 @@
     "curriculum"
   ],
   "dependencies": {
-    "autoprefixer": "^6.0.3",
-    "browser-saveas": "^1.0.0",
-    "csso": "^1.3.11",
     "email-scramble": "^2.0.0",
     "handlebars": "^4.0.3",
-    "moment": "^2.8.4",
-    "smooth-scroll": "git://github.com/cferdinandi/smooth-scroll.git#v7.1.1",
-    "uglify-js": "^2.4.24"
+    "moment": "^2.8.4"
   },
   "devDependencies": {
     "babel": "^5.8.29",
+    "babelify": "^6.4.0",
+    "browser-saveas": "^1.0.0",
     "browser-sync": "^2.8.2",
+    "browserify": "^12.0.1",
     "chai": "^3.4.0",
     "jshint": "^2.5.6",
     "mocha": "^2.3.3",
     "nodemon": "^1.2.1",
+    "pleeease-cli": "^4.0.0",
     "resume-schema": "0.0.16",
+    "smooth-scroll": "git://github.com/cferdinandi/smooth-scroll.git#v7.1.1",
+    "uglify-js": "^2.5.0",
     "webfont-dl": "^0.1.1"
   },
   "scripts": {
-    "start": "nodemon server.js -w lib -w assets -e js,css",
+    "start": "nodemon server.js -w lib -e js",
     "lint": "jshint index.js server.js lib/*.js",
     "pretest": "npm run lint -s",
     "test:unit": "mocha --compilers js:babel/register",
