--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "bugs": {
     "url": "https://github.com/ThibWeb/jsonresume-theme-eloquent/issues"
   },
+  "engines": {
+    "node": ">=4.0"
+  },
   "keywords": [
     "jsonresume",
     "jsonresume-theme",
