--- a/.jshintrc
+++ b/.jshintrc
@@ -23,7 +23,7 @@
   "evil"          : false,
   "expr"          : false,
   "funcscope"     : false,
-  "globalstrict"  : false,
+  "globalstrict"  : false
   "iterator"      : false,
   "lastsemic"     : false,
   "laxbreak"      : false,
