--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "jsonresume-theme-eloquent",
   "version": "3.0.1",
   "description": "An eloquent JSON Resume theme: fluent, persuasive, for developers.",
-  "author": "Thibaud Colas <thib@thib.me> (https://github.com/ThibWeb)",
+  "author": "Thibaud Colas <thib@thib.me> (https://github.com/thibaudcolas)",
   "license": "ISC",
   "main": "index.js",
-  "homepage": "https://github.com/ThibWeb/jsonresume-theme-eloquent",
+  "homepage": "https://github.com/thibaudcolas/jsonresume-theme-eloquent",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ThibWeb/jsonresume-theme-eloquent.git"
+    "url": "https://github.com/thibaudcolas/jsonresume-theme-eloquent.git"
   },
   "bugs": {
-    "url": "https://github.com/ThibWeb/jsonresume-theme-eloquent/issues"
+    "url": "https://github.com/thibaudcolas/jsonresume-theme-eloquent/issues"
   },
   "engines": {
     "node": ">=4.0"
