Use Prettier to reformat Markdown files

--- a/package.json
+++ b/package.json
@@ -32,6 +32,17 @@
     "jsonresume theme",
     "theme"
   ],
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 4,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": false,
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "arrowParens": "always",
+    "proseWrap": "preserve"
+  },
   "dependencies": {
     "email-scramble": "^2.0.0",
     "handlebars": "^4.0.3",
