--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.2",
   "description": "An eloquent JSON Resume theme: fluent, persuasive, for developers.",
   "author": "Thibaud Colas <thib@thib.me> (https://github.com/thibaudcolas)",
-  "license": "ISC",
+  "license": "MIT",
   "main": "index.js",
   "homepage": "https://github.com/thibaudcolas/jsonresume-theme-eloquent",
   "repository": {
