--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jsonresume-theme-eloquent",
   "version": "3.0.2",
-  "description": "An eloquent JSON Resume theme: fluent, persuasive, for developers.",
-  "author": "Thibaud Colas <thib@thib.me> (https://github.com/thibaudcolas)",
+  "description": "An eloquent JSON Resume theme: fluent, persuasive, for developers",
+  "author": "Thibaud Colas",
   "license": "MIT",
   "main": "index.js",
   "homepage": "https://github.com/thibaudcolas/jsonresume-theme-eloquent",
