--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,33 @@
-# EditorConfig is awesome: http://EditorConfig.org
+# Defines the coding style for different editors and IDEs.
+# https://editorconfig.org/
 
 # top-most EditorConfig file
 root = true
 
 # Rules for source code.
 [*]
-indent_style = space
-indent_size = 4
-end_of_line = lf
 charset = utf-8
+end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-[{package.json,*.yml}]
+indent_style = space
 indent_size = 2
+max_line_length = 80
 
-# Rules for markdown documents.
+[*.{py,pyi}]
+indent_size = 4
+
+# Documentation.
 [*.md]
+max_line_length = 0
 trim_trailing_whitespace = false
+
+# Git commit messages.
+[COMMIT_EDITMSG]
+max_line_length = 0
+trim_trailing_whitespace = false
+
+# Makefiles require tabs.
+[Makefile]
+indent_style = tab
+indent_size = 8
