--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "jsonresume-theme-eloquent",
   "version": "4.1.0",
   "description": "An eloquent JSON Resume theme: fluent, persuasive, for developers",
+  "homepage": "https://github.com/thibaudcolas/jsonresume-theme-eloquent",
   "author": "Thibaud Colas",
   "license": "MIT",
-  "main": "index.js",
-  "homepage": "https://github.com/thibaudcolas/jsonresume-theme-eloquent",
+  "main": "lib/resume.js",
+  "files": [
+    "lib/"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/thibaudcolas/jsonresume-theme-eloquent.git"
@@ -16,7 +19,6 @@
     "handlebars": "^4.7.8"
   },
   "scripts": {
-    "start": "node server.js -w lib -e js",
-    "test:render": "jest && node test/render.js"
+    "start": "node test/server.js"
   }
 }
